--- a/themes/melody/_config.yml
+++ b/themes/melody/_config.yml
@@ -122,7 +122,7 @@ scripts:
 # ---------------
 cdn:
   css:
-    # fontawesome: https://cdn.jsdelivr.net/npm/font-awesome@latest/css/font-awesome.min.css
+    fontawesome: https://cdn.jsdelivr.net/npm/font-awesome@latest/css/font-awesome.min.css
     fontawesomeV5: https://use.fontawesome.com/releases/v5.3.1/css/all.css
   js:
     anime: https://cdn.jsdelivr.net/npm/animejs@latest/anime.min.js
