--- a/_config.yml
+++ b/_config.yml
@@ -103,3 +103,14 @@ theme: melody
 deploy:
   type: git
   branch: gh-pages
+
+# RSS Feed
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
