--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo": "^4.2.1",
     "hexo-abbrlink": "^2.0.5",
     "hexo-admin": "^2.3.0",
+    "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^2.2.0",
