--- a/_config.melody.yml
+++ b/_config.melody.yml
@@ -26,7 +26,7 @@ menu:
 
 # Favicon
 # ---------------
-favicon: /melody-favicon.ico
+favicon: /img/favicon.ico
 
 # PWA
 # See https://github.com/JLHwung/hexo-offline
